working on ingest launch failure functionality

--- a/app/views/single_cell_mailer/notify_admin_upload_fail.html.erb
+++ b/app/views/single_cell_mailer/notify_admin_upload_fail.html.erb
@@ -1,6 +1,6 @@
 <p>The following file failed to automatically push to Terra:</p>
 
-<p>Study: <%= @study.name %><br />
+<p>Study: <%= @study.accession %><br />
 File: <%= @study_file.upload_file_name %><br />
 Terra Workspace: <%= @study.firecloud_workspace %></p>
 
