--- a/app/views/single_cell_mailer/notify_admin_upload_fail.html.erb
+++ b/app/views/single_cell_mailer/notify_admin_upload_fail.html.erb
@@ -5,4 +5,11 @@ File: <%= @study_file.upload_file_name %><br />
 Terra Workspace: <%= @study.firecloud_workspace %></p>
 
 <p>The error that occurred was: <%= @error %></p>
-<p>Please manually push the file to Terra.</p>
+<p>Please manually push the file to the workspace bucket and relaunch the parse job with the following commands:</p>
+
+<pre><strong>
+  study = Study.find_by(accession: '<%= @study.accession %>')
+  study_file = study.study_files.detect {|file| file.upload_file_name == '<%= @study_file.upload_file_name %>'}
+  user = User.find_by(email: '<%= @user.email %>')
+  FileParseService.run_parse_job(study_file, study, user)
+</strong></pre>
