--- a/app/views/studies/_initialize_expression_form.html.erb
+++ b/app/views/studies/_initialize_expression_form.html.erb
@@ -23,7 +23,7 @@
 	</div>
   <div class="form-group row">
     <div class="col-sm-4">
-      <%= f.label :taxon_id, "Species <i class='text-danger'>*</i>".html_safe %> <%= render partial: 'taxon_help_popover', locals: {id: study_file.id.to_s} %><br />
+      <%= f.label :taxon_id, label_with_asterisk('Species') %> <%= render partial: 'taxon_help_popover', locals: {id: study_file.id.to_s} %><br />
       <%= f.select :taxon_id, options_from_collection_for_select(Taxon.sorted, :id, :display_name, study_file.taxon_id), {prompt: 'Select one...'}, {class: 'form-control'} %>
     </div>
     <div class="col-sm-8">
