--- a/app/views/studies/_initialize_study_label.html.erb
+++ b/app/views/studies/_initialize_study_label.html.erb
@@ -2,6 +2,6 @@
 	<% if @study.initialized %>
 		<small class="initialize-label" data-toggle="tooltip" data-placement="right" title="Your study is now initialized and visualizations have been enabled."><span class="label label-success">Visualizations Initialized <span class="fas fa-check" ></span> </span></small>
 	<% else %>
-		<small class="initialize-label" data-toggle="tooltip" data-placement="right" title="You have not uploaded all of the required files to enable visualizations yet."><span class="label label-danger">Visualizations Not Initialized <span class="fas fa-times" ></span> </span></small>
+		<small class="initialize-label" data-toggle="tooltip" data-placement="right" title="Visualizations are not fully enabled until at least one expression matrix, metadata, and cluster file have finished parsing."><span class="label label-danger">Visualizations Not Initialized <span class="fas fa-times" ></span> </span></small>
 	<% end %>
 </span>
