Use more consistent names; align with SCP lingo
What this code calls "names" most other SCP code and docs calls "labels".  Also, the user is creating only one annotation -- i.e. a set of labeled cell-selection -- not multiple of them.  Thus change label from "Create Annotations" to "Create Annotation".

--- a/app/views/site/_selection_well.html.erb
+++ b/app/views/site/_selection_well.html.erb
@@ -15,7 +15,7 @@
     </div>
     <div id="selection-button">
       <div class="col-xs-12 text-center">
-        <%= f.button 'Create Annotations', {class:'btn btn-success', id: 'selection-submit', type: 'button'} %>
+        <%= f.button 'Create Annotation', {class:'btn btn-success', id: 'selection-submit', type: 'button'} %>
       </div>
     </div>
   <% end %>
