Refactor users annotations code for readability and cohesion

--- a/app/views/site/_selection_well.html.erb
+++ b/app/views/site/_selection_well.html.erb
@@ -11,8 +11,7 @@
       <% end %>
       <%= f.hidden_field :loaded_annotation, value: params[:annotation] %>
     </div>
-    <div id="selection-table">
-    </div>
+    <div id="selection-table"></div>
     <div id="selection-button">
       <div class="col-xs-12 text-center">
         <%= f.button 'Create Annotation', {class:'btn btn-success', id: 'selection-submit', type: 'button'} %>
