--- a/app/views/studies/new.html.erb
+++ b/app/views/studies/new.html.erb
@@ -11,11 +11,12 @@
   <h4>Billing Projects</h4>
   <p>You must select a billing project when creating your study.  You may use the default project, but you will not be allowed to run any computes in your workspace.  If you
     wish to run computes, then you must <%= scp_link_to 'create a billing project', billing_projects_path %> (using a Google billing account that you own) first before creating this study.
-    <strong>By selecting a project for your study other than the default project, you will be granting the Single Cell Portal access to your project if it does not already have access
-      (projects created through the portal do by default).</strong></p>
+    <strong>By selecting a project for your study other than the default project, you will be granting the Single Cell Portal access to your billing project</strong>
+      (billing projects created through the portal also give access to Single Cell Portal).</p>
   <p class="text-danger"><strong><i class="fas fa-fw fa-exclamation-triangle"></i> You cannot change the billing project of a workspace once it has been created.</strong></p>
-  <h4>Metadata convention</h4>
-  <p>Metadata files must provide required information using <%= link_to 'SCP Conventional File Format', 'https://github.com/broadinstitute/single_cell_portal/wiki/Metadata-File#scp-conventional-file-format', target: :_blank %>. Select ontology terms from <%= link_to 'designated ontologies', 'https://github.com/broadinstitute/single_cell_portal/wiki/Metadata-File#Required-Conventional-Metadata', target: :_blank %>, adhere to <%= link_to 'metadata validation rules', 'https://github.com/broadinstitute/single_cell_portal/wiki/Metadata-File#metadata-validation-rules', target: :_blank %>, and make your study data discoverable through Single Cell Portal's new <a href="#" id="why-label-data-modal-link">Advanced Search feature</a>. Required metadata include: <strong>species</strong>, <strong>disease</strong>, <strong>organ</strong>, <strong>library_preparation_protocol</strong>, and <strong>sex</strong>.  To enable data reuse, you must also include <strong>cell name</strong>, <strong>biosample_id</strong>, and <strong>donor_id</strong>.</p>
+  <br/>
+  <h4>Required file format & ontologies</h4>
+  <p>Studies must have a metadata file specifying: <strong>species</strong>, <strong>disease</strong>, <strong>organ</strong>, <strong>library_preparation_protocol</strong>, <strong>sex</strong>, <strong>cell name</strong>, <strong>biosample_id</strong>, and <strong>donor_id</strong>.</p>  Metadata files must provide this information using <%= link_to 'SCP Conventional File Format', 'https://github.com/broadinstitute/single_cell_portal/wiki/Metadata-File#scp-conventional-file-format', target: :_blank %>. Select ontology terms from <%= link_to 'designated ontologies', 'https://github.com/broadinstitute/single_cell_portal/wiki/Metadata-File#Required-Conventional-Metadata', target: :_blank %> to adhere to <%= link_to 'metadata validation rules', 'https://github.com/broadinstitute/single_cell_portal/wiki/Metadata-File#metadata-validation-rules', target: :_blank %>.  These requirements make your study data discoverable through Single Cell Portal's Advanced Search feature.
 </div>
 
 <%= render 'form' %>
@@ -38,33 +39,3 @@
   </div>
 </div>
 
-<div class="modal" id="why-label-data-modal" role="dialog" aria-labelledby="covid19-contact-modal" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <span class="text-left" style="font-size:1.5em"><strong>Why label data?</strong></span> <button class="close" data-dismiss="modal">×</button>
-      </div>
-      <div class="modal-body">
-        <div>
-          <p>Annotating cells in your study with ontology-based metadata allows your data to be accessed and used more broadly. The SCP Metadata Convention defines a set of metadata terms for consistent search across studies by leveraging established biomedical ontologies and controlled vocabulary. <strong><%= link_to 'Learn more', 'https://github.com/broadinstitute/single_cell_portal/wiki/Search-Studies', target: :_blank %></strong>.</p>
-          </p>
-        </div>
-        <div class="text-center">
-          <img src="<%= image_url('AdvancedSearchExample.gif')%>" width="600" height="400"/>
-        </div>
-        <div class="text-left">
-          <button class="btn btn-primary" data-dismiss="modal">OK</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<script type="text/javascript" nonce="<%= content_security_policy_script_nonce %>">
-  $(document).ready(function() {
-    $('#why-label-data-modal-link').on('click', function() {
-      $('#why-label-data-modal').modal('show');
-      return false;
-    })
-  });
-</script>
