initial gene collapse working

--- a/app/views/site/_search_options.html.erb
+++ b/app/views/site/_search_options.html.erb
@@ -101,6 +101,7 @@
                 function submitGeneSearch(event) {
                     // concatenate all inputs together to see if there is any value anywhere
                     var allValues = $('#search_genes').val() + $('#search_upload').val() + $('#gene_set').val() + $('#expression').val();
+                    debugger;
                     if ( allValues === '' ) {
                         alert('You must specify at least one gene, gene list, or upload a list of genes to search');
                         setErrorOnBlank($('.search-genes-input'));
