improving summary report performance

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -94,7 +94,7 @@
 
     var cellCounts = [{
         x: ['Public', 'Private'],
-        y: [<%= @public_studies.map(&:cell_count).reduce(0, :+) %>, <%= @private_studies.map(&:cell_count).reduce(0, :+) %>],
+        y: [<%= @public_cell_dist.sum %>, <%= @private_cell_dist.sum %>],
         type: 'bar',
         marker: {
             color: [colorBrewerSet[3], colorBrewerSet[4]]
@@ -103,7 +103,7 @@
 
     Plotly.newPlot('plotly-cell-count', cellCounts,
         {
-            title: 'How many cells total are in private or public studies?<br><b>Total number of cells in portal: ' + <%= @all_studies.map(&:cell_count).reduce(0, :+) %> + '</b>',
+            title: 'How many cells total are in private or public studies?<br><b>Total number of cells in portal: ' + <%= @cell_dist.sum %> + '</b>',
             titlefont: plotlyTitleFont,
             font: plotlyLabelFont,
             bargap: 0,
