--- a/app/views/site/_study_download_data.html.erb
+++ b/app/views/site/_study_download_data.html.erb
@@ -31,7 +31,7 @@
                   </thead>
                 </table>
               <% end %>
-              Then <%= link_to "click here".html_safe, "#{generate_manifest_study_url(@study)}" %> for the manifest.json containing file supplementary information (units, protocols, etc...)
+              Then <%= link_to "click here".html_safe, "#{generate_manifest_study_url(@study)}" %> for the file_supplemental_info.tsv containing file supplementary information (units, protocols, etc...)
             <% elsif @study.public? && !@user_embargoed || current_user.admin? %>
               <p class="lead">To download all files using <code>curl</code>, click the button below to get the download command:</p>
               <p class="lead command-container" id="command-container-all"><%= link_to "<i class='fas fa-download'></i> Get download command for all study data".html_safe, '#/', class: 'btn btn-default get-download-command', id: 'get-download-command_all' %></p>
@@ -53,10 +53,10 @@
                     <% end %>
                   </thead>
                 </table>
-              <% else %>
-                <%# The user is trying to download a public study that is currently embargoed. %>
-                <p class="lead">No downloads are available to you for this study yet</p>
               <% end %>
+            <% else %>
+              <%# The user is trying to download a public study that is currently embargoed. %>
+              <p class="lead">No downloads are available to you for this study yet</p>
             <% end %>
           </div>
           <div class="modal-footer">
@@ -186,7 +186,7 @@
       </tr>
     <% end %>
       <tr>
-        <td>manifest.json <i>(auto-generated)</i></td>
+        <td>file_supplemental_info.tsv <i>(auto-generated)</i></td>
         <td>Listing of all study files, and any supplementary information (units, protocols, etc...)</td>
         <td></td>
         <td></td>
