--- a/app/views/site/show_user_annotations_form.js.erb
+++ b/app/views/site/show_user_annotations_form.js.erb
@@ -1,2 +1,2 @@
 // console.log('in show_user_annotations_form.js.erb');
-// $('#selection_div').html("<%= escape_javascript(render partial: 'selection_well') %>");
+// $('#create-annotation-panel').html("<%= escape_javascript(render partial: 'selection_well') %>");
