--- a/app/views/site/create_workspace_submission.js.erb
+++ b/app/views/site/create_workspace_submission.js.erb
@@ -9,5 +9,6 @@ closeModalSpinner('#generic-modal-spinner', '#generic-modal', function () {
     });
     var requestUrl = '<%= javascript_safe_url(request.fullpath) %>';
     ga('send', 'event', 'engaged_user_action', 'terra_pipeline_submission');
+    window.SCP.log('terraPipelineSubmission')
     gaTrack(requestUrl, 'Single Cell Portal');
 });
