gene search interface for react explore tab

--- a/app/views/site/_study_visualize.html.erb
+++ b/app/views/site/_study_visualize.html.erb
@@ -45,6 +45,7 @@
 <script type="text/javascript" nonce="<%= content_security_policy_script_nonce %>">
   window.SCP.studyAccession = '<%= @study.accession %>';
 
-  window.SCP.exploreDefault();
+  //window.SCP.exploreDefault();
+  window.SCP.renderExploreView($('#study-visualize')[0], window.SCP.studyAccession)
 
 </script>
