view options toggle and scatter plot framing

--- a/app/javascript/styles/_keywordSearch.scss
+++ b/app/javascript/styles/_keywordSearch.scss
@@ -64,3 +64,10 @@
 .gene-keyword-search-input {
   flex: 1;
 }
+
+.study-explore .gene-keyword-search {
+	width: 100%;
+	.input-group {
+		width: 100%;
+	}
+}
