--- a/app/javascript/styles/application.scss
+++ b/app/javascript/styles/application.scss
@@ -7,4 +7,5 @@
 @import '/_searchPanel.scss';
 @import './_resultsPanel.scss';
 @import '/_studyOverview.scss';
+@import './_explore.scss';
 @import '/_relatedGenesIdeogram.scss';
