--- a/app/javascript/styles/_explore.scss
+++ b/app/javascript/styles/_explore.scss
@@ -2,13 +2,27 @@
 	position: relative;
 }
 
+.plot {
+	position: relative;
+	.gene-load-spinner {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    color: #999;
+    font-size: 2.5em;
+  }
+}
+
 .view-options-toggle {
 	border: none;
 	background: none;
 	font-weight: bold;
 	position: absolute;
-	top: 0px;
+	top: 10px;
 	right: 0px;
+	&.open {
+		right: 16vw;
+	}
 }
 
 
