implementing 3d scatter plots

--- a/app/views/site/_study_visualize.html.erb
+++ b/app/views/site/_study_visualize.html.erb
@@ -46,6 +46,6 @@
   window.SCP.studyAccession = '<%= @study.accession %>';
 
   //window.SCP.exploreDefault();
-  window.SCP.renderExploreView($('#study-visualize')[0], window.SCP.studyAccession)
+  window.SCP.renderExploreView(document.getElementById('study-visualize'), window.SCP.studyAccession)
 
 </script>
