--- a/app/javascript/styles/_explore.scss
+++ b/app/javascript/styles/_explore.scss
@@ -1,10 +1,5 @@
 .study-explore {
 	position: relative;
-}
-
-.plot {
-	position: relative;
-	background: #fff;
 	.gene-load-spinner {
     position: absolute;
     top: 40%;
@@ -12,6 +7,19 @@
     color: #999;
     font-size: 2.5em;
   }
+}
+
+.explore-plot-tab-content {
+	min-height: 50vh;
+}
+
+.plot {
+	position: relative;
+	background: #fff;
+}
+
+.explore-plot-tab-content {
+	background: #fff;
 }
 
 .view-options-toggle {
