--- a/app/javascript/styles/_explore.scss
+++ b/app/javascript/styles/_explore.scss
@@ -7,7 +7,12 @@
     color: #999;
     font-size: 2.5em;
   }
+  a {
+  	cursor: pointer;
+	}
 }
+
+
 
 .explore-plot-tab-content {
 	min-height: 50vh;
