--- a/app/views/site/_study_download_data.html.erb
+++ b/app/views/site/_study_download_data.html.erb
@@ -34,7 +34,9 @@
               Then <%= link_to "click here".html_safe, "#{generate_manifest_study_url(@study)}" %> for the file_supplemental_info.tsv containing file supplementary information (units, protocols, etc...)
             <% elsif @study.public? && !@user_embargoed || current_user.admin? %>
               <p class="lead">To download all files using <code>curl</code>, click the button below to get the download command:</p>
-              <p class="lead command-container" id="command-container-all"><%= link_to "<i class='fas fa-download'></i> Get download command for all study data".html_safe, '#/', class: 'btn btn-default get-download-command', id: 'get-download-command_all' %></p>
+              <p class="lead command-container" id="command-container-all">
+                <%= link_to "<i class='fas fa-download'></i> Get download command for all study data".html_safe,
+                            '#/', class: 'btn btn-default get-download-command', id: 'get-download-command_all' %></p>
               <% if @directories.any? %>
                 <p class="lead">To download all data files in a specific folder, use the following commands:</p>
                 <table class="table table-condensed table-striped">
@@ -46,8 +48,10 @@
                     <% @directories.each do |directory| %>
                       <tr>
                         <td><%= directory.name %></td>
-                        <td class="command-container" id="command-container-<%= directory.name %>">
-                          <%= link_to "<i class='fas fa-download'></i> Get download command".html_safe, '#/', class: 'btn btn-default get-download-command', id: "get-download-command_#{directory.name}" %>
+                        <td class="command-container" id="command-container-<%= directory.url_safe_name %>">
+                          <%= link_to "<i class='fas fa-download'></i> Get download command".html_safe, '#/',
+                                      class: 'btn btn-default get-download-command', id: "get-download-command_#{directory.url_safe_name}",
+                                      data: {filetypes: 'None' } %>
                         </td>
                       </tr>
                     <% end %>
@@ -83,7 +87,8 @@
         $('body').on('click', '.btn-refresh', function(event) {
           var commandContainer = $(this).parentsUntil('.command-container').parent();
           var downloadObject = commandContainer.attr('id').split('-').slice(-1)[0];
-          writeDownloadCommand(downloadObject);
+          var fileTypes = commandContainer.data('filetypes');
+          writeDownloadCommand(downloadObject, fileTypes);
         });
 
         /**
@@ -91,7 +96,7 @@
          *
          * @param downloadObject {String} 'all' or a particular directory listing, e.g. 'csvs'
          */
-        function writeDownloadCommand(downloadObject) {
+        function writeDownloadCommand(downloadObject, fileTypes) {
 
           $('.tooltip').remove();
 
@@ -104,14 +109,22 @@
               var expiresMinutes = timeInterval / 60;
               const accession = "<%= @study.accession %>"
               const curlSecureFlag = "<%= Rails.env.development? ? '-k' : '' %>"
+              const downloadObjectName = downloadObject == 'root-dir' ? '%2F' : downloadObject
               // Gets a curl configuration ("cfg.txt") containing signed
               // URLs and output names for all files in the download object.
               var url = (
                 window.location.origin +
                 '/single_cell/api/v1/search/bulk_download?' +
                 `accessions=${accession}` +
-                `&auth_code=${authCode}`
+                `&auth_code=${authCode}` +
+                `&directory=${downloadObjectName}`
               );
+
+              // if this is a single-directory download, append 'file_types=None' to exclude all other files from
+              // bulk download request
+              if ( typeof fileTypes !== 'undefined' ) {
+                  url += `&file_types=${fileTypes}`
+              }
 
               // This is what the user will run in their terminal to download the data.
               var downloadCommand = (
@@ -144,7 +157,8 @@
         $('body').on('click', '.get-download-command', function(event) {
           var downloadButton = $(this);
           var downloadObject = downloadButton.attr('id').split('_')[1];
-          writeDownloadCommand(downloadObject);
+          var fileTypes = downloadButton.data('filetypes');
+          writeDownloadCommand(downloadObject, fileTypes);
         });
     </script>
     <% end %>
