--- a/app/javascript/styles/_explore.scss
+++ b/app/javascript/styles/_explore.scss
@@ -32,6 +32,7 @@
 	}
 	input[type="text"] {
 		margin-bottom: 0.5em;
+		width: 100%;
 	}
 	.delete-icon {
 		border: none;
@@ -45,6 +46,9 @@
 	}
 	ul {
 		padding-inline-start: 10px;
+	}
+	.gene-load-spinner {
+		position: relative;
 	}
 }
 
@@ -77,11 +81,13 @@
 		border-radius: 5px;
 		background: #fff;
 		box-shadow: none;
+		margin-bottom: 10px;
 	}
 	.panel-heading {
 	  cursor: pointer;
 		background: #ddd;
 		border-radius: 5px;
+		padding: 5px 15px;
 	}
 }
 
