--- a/app/javascript/styles/_explore.scss
+++ b/app/javascript/styles/_explore.scss
@@ -70,7 +70,7 @@
 }
 
 
-.study-explore .cluster-controls {
+.study-explore .view-options {
   // leave room for the 'view options' toggle
 	margin-top: 3em;
 }
