fixing UI flow for invalid coordinate label file

--- a/app/views/studies/_initialize_labels_form.html.erb
+++ b/app/views/studies/_initialize_labels_form.html.erb
@@ -19,7 +19,7 @@
     <%= f.fields_for :options do |opts| %>
       <div class="col-sm-4">
         <%= opts.label :cluster_file_id, 'Select the cluster to apply labels to' %><br />
-        <%= opts.select :cluster_file_id, options_for_select(@study.cluster_ordinations_files.map {|cluster_file| [cluster_file.name, cluster_file.id]}, f.object.new_record? ? nil : f.object.bundle_parent.id), {}, class: 'form-control' %>
+        <%= opts.select :cluster_file_id, options_for_select(@study.cluster_ordinations_files.map {|cluster_file| [cluster_file.name, cluster_file.id]}, f.object.new_record? ? nil : f.object.bundle_parent.try(:id)), {include_blank: true}, class: 'form-control' %>
       </div>
       <div class="col-sm-3">
         <%= opts.label :font_family, 'Display font for labels' %><br />
