--- a/app/views/site/_study_download_data.html.erb
+++ b/app/views/site/_study_download_data.html.erb
@@ -36,7 +36,7 @@
               <p class="lead">To download all files using <code>curl</code>, click the button below to get the download command:</p>
               <p class="lead command-container" id="command-container-all">
                 <%= link_to "<i class='fas fa-download'></i> Get download command for all study data".html_safe,
-                            '#/', class: 'btn btn-default get-download-command', id: 'get-download-command_all' %></p>
+                            '#/', class: 'btn btn-default get-download-command', id: 'get-download-command__all' %></p>
               <% if @directories.any? %>
                 <p class="lead">To download all data files in a specific folder, use the following commands:</p>
                 <table class="table table-condensed table-striped">
@@ -50,7 +50,7 @@
                         <td><%= directory.name %></td>
                         <td class="command-container" id="command-container-<%= directory.url_safe_name %>">
                           <%= link_to "<i class='fas fa-download'></i> Get download command".html_safe, '#/',
-                                      class: 'btn btn-default get-download-command', id: "get-download-command_#{directory.url_safe_name}",
+                                      class: 'btn btn-default get-download-command', id: "get-download-command__#{directory.url_safe_name}",
                                       data: {filetypes: 'None' } %>
                         </td>
                       </tr>
@@ -86,7 +86,7 @@
 
         $('body').on('click', '.btn-refresh', function(event) {
           var commandContainer = $(this).parentsUntil('.command-container').parent();
-          var downloadObject = commandContainer.attr('id').split('-').slice(-1)[0];
+          var downloadObject = commandContainer.attr('id').split('__').slice(-1)[0];
           var fileTypes = commandContainer.data('filetypes');
           writeDownloadCommand(downloadObject, fileTypes);
         });
@@ -156,7 +156,7 @@
         // Show the download command upon clicking the "Get download command" button
         $('body').on('click', '.get-download-command', function(event) {
           var downloadButton = $(this);
-          var downloadObject = downloadButton.attr('id').split('_')[1];
+          var downloadObject = downloadButton.attr('id').split('__').slice(-1)[0];
           var fileTypes = downloadButton.data('filetypes');
           writeDownloadCommand(downloadObject, fileTypes);
         });
