updating plotly titles and hovertemplate display

--- a/app/javascript/styles/_explore.scss
+++ b/app/javascript/styles/_explore.scss
@@ -19,6 +19,15 @@
 		position: relative;
 		background: #fff;
 		min-height: 300px;
+		.help-block {
+			margin-left: 1em;
+		}
+	}
+	.plot-title {
+		margin-left: 1em;
+		margin-top: 0.5em;
+	}
+	.legendtitletext {
 	}
 }
 
