--- a/app/javascript/styles/_global.scss
+++ b/app/javascript/styles/_global.scss
@@ -485,6 +485,10 @@ h6,
   display: flex;
 }
 
+.align-center {
+	align-items: center;
+}
+
 /* Override bootstrap styles to SCP colors */
 .alert.alert-info {
   color: $action-color;
