--- a/app/views/site/update_study_settings.js.erb
+++ b/app/views/site/update_study_settings.js.erb
@@ -8,7 +8,11 @@ closeModalSpinner('#update-study-settings-spinner', '#update-study-settings-moda
         $('#study-summary').html("<%= escape_javascript(render partial: 'study_description_view') %>");
         $('#study-download').html("<%= escape_javascript(render partial: 'study_download_data') %>");
         <% if @study.initialized? %>
-          $('#study-visualize').html("<%= escape_javascript(render partial: 'study_visualize') %>");
+          <% if User.feature_flag_for_instance(current_user, 'react_explore')  %>
+            window.SCP.renderExploreView(document.getElementById('study-visualize'), window.SCP.studyAccession)
+          <% else %>
+            $('#study-visualize').html("<%= escape_javascript(render partial: 'study_visualize') %>");
+          <% end %>
         <% end %>
     <% else %>
         showMessageModal("", "An error occurred while saving: <br /><%= @study.errors.full_messages.join(', ').html_safe %>");
