--- a/app/javascript/styles/application.scss
+++ b/app/javascript/styles/application.scss
@@ -9,3 +9,4 @@
 @import '/_studyOverview.scss';
 @import './_explore.scss';
 @import '/_relatedGenesIdeogram.scss';
+@import '/_inferCNVIdeogram.scss';
