--- a/app/javascript/styles/_keywordSearch.scss
+++ b/app/javascript/styles/_keywordSearch.scss
@@ -12,7 +12,7 @@
   width: 340px;
   white-space: nowrap;
 
-  input.form-control, .gene-keyword-search-input > div {
+  input.form-control, .gene-keyword-search-input > div:first-of-type {
     background-color: white;
     border: 1px solid $action-color;
     border-radius: 15px 0px 0px 15px;
