--- a/app/views/branding_groups/show.html.erb
+++ b/app/views/branding_groups/show.html.erb
@@ -17,6 +17,12 @@
       <%= image_tag @branding_group.footer_image.url, class: 'img-thumbnail' %>
     </div>
   </div>
+  <div class="row">
+    <div class="col-md-12">
+      <p>External resource link: <%= @branding_group.external_link_url %></p>
+      <p>External resource description: <%= @branding_group.external_link_description %></p>
+    </div>
+  </div>
 </div>
 
 <p>
