--- a/app/views/layouts/_download_link.html.erb
+++ b/app/views/layouts/_download_link.html.erb
@@ -9,7 +9,7 @@
       <% elsif !study_file.generation %>
             <span class="label label-warning no-download-available" title="You will be able to download this file once it has been uploaded to our remote data store.  Check back soon.", data-toggle="tooltip"><i class="fas fa-ban"></i> Awaiting remote file</span>
       <% else %>
-          <span class="btn btn-sm btn-danger disabled-download" title="This file exceeds your daily download quota of <%= number_to_human(@download_quota) %>.  Please wait until tomorrow.", data-toggle="tooltip"><i class="fas fa-times"></i> Exceeds Quota</span>
+          <span class="btn btn-sm btn-danger disabled-download" title="This file exceeds your daily download quota of <%= number_to_human_size(@download_quota) %>.  Please wait until tomorrow.", data-toggle="tooltip"><i class="fas fa-times"></i> Exceeds Quota</span>
       <% end %>
   <% end %>
 <% end %>
