--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -82,7 +82,7 @@
               <h4>Please complete your Terra registration</h4>
               <p>
                 You may not update your Terra profile until you have registered with Terra and accepted the terms of service.
-                Please visit <%= link_to 'Terra', 'https://app.terra.bio', target: :_blank %>, select 'Sign in with Google'
+                Please <%= link_to 'visit Terra', 'https://app.terra.bio', target: :_blank %>, select 'Sign in with Google'
                 from the top-lefthand nav menu, and complete the sign in and registration process.
               </p>
               <p class="text-center">
