webpack updates re: Rails 6.1

--- a/app/javascript/styles/application.scss
+++ b/app/javascript/styles/application.scss
@@ -3,10 +3,10 @@
 @import './_forms.scss';
 @import './_spin.scss';
 @import './_search.scss';
-@import '/_keywordSearch.scss';
-@import '/_searchPanel.scss';
+@import './_keywordSearch.scss';
+@import './_searchPanel.scss';
 @import './_resultsPanel.scss';
-@import '/_studyOverview.scss';
+@import './_studyOverview.scss';
 @import './_explore.scss';
-@import '/_relatedGenesIdeogram.scss';
-@import '/_inferCNVIdeogram.scss';
+@import './_relatedGenesIdeogram.scss';
+@import './_inferCNVIdeogram.scss';
