fixing more test regressions

--- a/app/views/preset_searches/_form.html.erb
+++ b/app/views/preset_searches/_form.html.erb
@@ -34,7 +34,7 @@
           Enter facet identifers and filter IDs, plus-delimited (+) between facets, colons between identifiers and filters,
           commas between filter values.
           <%= link_to "List of Available Facets <i class='fas fa-external-link-alt'></i>".html_safe,
-                      api_swagger_ui_engine_path + '#/Search/search_facets_path',
+                      api_v1_swagger_ui_path + '#/Search/search_facets_path',
                       class: 'btn btn-default btn-xs', target: :_blank %><br />
           <span class="help-block">Example: <code>disease:MONDO_0000001,MONDO_0018076+species:NCBITaxon_9606,NCBITaxon_10090</code></span>
         </p>
