fixing branding group image loading to work with legacy paperclip paths

--- a/app/views/site/_main_banner_content.html.erb
+++ b/app/views/site/_main_banner_content.html.erb
@@ -1,7 +1,7 @@
 <div class="mask" id="main-banner">
 
   <% if @selected_branding_group.present? %>
-    <% if @selected_branding_group.banner_image.present? %>
+    <% if @selected_branding_group.banner_image.file %>
       <style>
         #main-banner {
           background-image: url("<%= @selected_branding_group.banner_image.url %>") !important;
@@ -9,7 +9,7 @@
       </style>
     <% end %>
     <div id="main-banner-logo">
-      <% if @selected_branding_group.splash_image.present? %>
+      <% if @selected_branding_group.splash_image.file %>
         <%= image_tag @selected_branding_group.splash_image.url, style: 'padding: 5px 0; display: inline-block;' %>
       <% end %>
       <p id='main-banner-name'><%= @selected_branding_group.name %></p>
