--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -174,7 +174,7 @@
 </div>
 <div id="generic-update-target"></div>
 <div id="scp-footer">
-  <% if @selected_branding_group.present? && @selected_branding_group.footer_image.present? %>
+  <% if @selected_branding_group.present? && @selected_branding_group.footer_image.file %>
     <%= image_tag @selected_branding_group.footer_image.url, class: 'pull-left' %>
   <% else %>
     <%= link_to image_tag('broad-logo-white.png'), "https://www.broadinstitute.org", class: 'pull-left' %>
