adding comments re: source for swagger html/js

--- a/app/views/api/v1/api_docs/oauth2_redirect.html
+++ b/app/views/api/v1/api_docs/oauth2_redirect.html
@@ -1,3 +1,8 @@
+<!--
+  HTML/JS for OAuth2 integration of static distribution bundle build
+  from: https://github.com/swagger-api/swagger-ui/blob/master/dist/oauth2-redirect.html
+  works with static front end being served via swagger_ui.html.erb
+-->
 <!doctype html>
 <html lang="en-US">
 <title>Swagger UI: OAuth2 Redirect</title>
